--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/Jim97M/sensegras-aws#readme",
   "dependencies": {
+    "amazon-cognito-identity-js": "^5.2.9",
     "aws-sdk": "^2.1158.0",
     "express": "^4.18.1",
+    "node-fetch": "^3.2.6",
     "serverless-http": "^3.0.1"
   }
 }
