--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^5.2.9",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
