--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   },
   "dependencies": {
     "@devexpress/dx-react-chart": "^3.0.3",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "amazon-cognito-identity-js": "^5.2.9",
     "chart.js": "^3.8.0",
     "path": "^0.12.7",
